--- a/resources.html
+++ b/resources.html
@@ -11,7 +11,7 @@
   <!-- Bootstrap & AOS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
+<link rel="stylesheet" href="style.css">
   <!-- Custom Styles -->
   <style>
     body {
@@ -76,8 +76,8 @@
       <h1 data-aos="fade-down" data-aos-duration="1500" class="logo">PRIME<i><b>X</b></i></h1>
       <nav data-aos="fade-down" data-aos-delay="300">
         <a href="index.html">HOME</a>
-        <a href="company.html">CDNJS</a>
-        <a href="products.html">PORTFOLIO</a>
+        <a href="company.html">ABOUT US</a>
+        <a href="products.html">PRODUCTS</a>
         <a href="docs.html">DOCS</a>
       </nav>
       <button data-aos="fade-down" data-aos-duration="1500" class="btn-signing">
@@ -169,4 +169,5 @@
   <script>AOS.init({ once: true });</script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
