--- a/company.html
+++ b/company.html
@@ -76,7 +76,7 @@
       <h1 data-aos="fade-down" data-aos-duration="1500" class="logo">PRIME<i><b>X</b></i></h1>
       <nav data-aos="fade-down" data-aos-delay="300">
         <a href="index.html">HOME</a>
-        <a href="products.html">PORTFOLIO</a>
+        <a href="products.html">PRODUCTS</a>
         <a href="docs.html">DOCS</a>
         <a href="resources.html">FAQ</a>
       </nav>
@@ -152,4 +152,5 @@
   <script>AOS.init({ once: true });</script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
