--- a/products.html
+++ b/products.html
@@ -7,7 +7,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="style.css">
   <!-- Bootstrap & AOS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -102,7 +102,7 @@
       <h1 data-aos="fade-down" data-aos-duration="1500" class="logo">PRIME<i><b>X</b></i></h1>
       <nav data-aos="fade-down" data-aos-delay="300">
         <a href="index.html">HOME</a>
-        <a href="company.html">CDNJS</a>
+        <a href="company.html">ABOUT US</a>
         <a href="docs.html">DOCS</a>
         <a href="resources.html">FAQ</a>
       </nav>
@@ -195,4 +195,5 @@
   <script>AOS.init({ once: true });</script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
